improvement(mainpage): split on small components and layout fixes

--- a/src/components/logo/styles.module.css
+++ b/src/components/logo/styles.module.css
@@ -1,10 +1,5 @@
 .root {
     display: flex;
-    position: absolute;
-
-    top: 68px;
-    left: 80px;
-
     flex-direction: column;
     justify-content: center;
 }
